# jpegflipper

./: CMakeLists.txt  README.md  main.cpp  task.cpp  task.h  threadpool.cpp  threadpool.h
